# mcp-demo

./: README.md
demo-mcp-server/: package.json  pnpm-lock.yaml
demo-mcp-server/src/: firecrawl.js  server.js
frontend/: bun.lockb  package.json
frontend/src/app/: page.tsx
products-api/: bun.lockb  package.json
products-api/src/: index.ts
server/api-fulfillment/: README.md
server/api-fulfillment/src/: index.ts
server/api-products/src/data/: guitars.ts
server/fulfillment-api/: bun.lockb  package.json
server/mcp-server-firecrawl/: package.json  pnpm-lock.yaml
server/mcp-server-firecrawl/src/: firecrawl.js  server.js
server/mcp-server-js/: package.json
server/mcp-server-js/src/: server-logic.js  sse-server.js
server/products-api/: README.md
server/pydantic-fastapi/: main.py  pyproject.toml
server/pydantic-fastapi/pydantic_fastapi/routers/fastapi_vercelai/: fast.py
server/pydantic-fastapi/pydantic_fastapi/routers/fastapi_vercelai/utils/: prompt.py  tools.py
server/pydantic-fastapi/pydantic_fastapi/routers/pydantic_agent/: agent.py
web/next/: bun.lockb  package.json
web/next/src/app/: layout.tsx  page.tsx
web/next/src/components/: recommended-guitar.tsx
web/next/src/providers/: react-query.tsx
web/tanstack/: README.md  auth-middleware.ts  bun.lockb  drizzle.config.ts  package.json  tsconfig.json
web/tanstack/app/: client.tsx  routeTree.gen.ts  router.tsx  ssr.tsx
web/vite/: README.md  bun.lockb  package.json  tsconfig.app.json
web/vite/server/: index.js
web/vite/src/: App.tsx  index.css  main.tsx
(+29 files in other folders)
